# Skillbox_tasks

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: check.yml
Basic collections - Dictionaries and Sets/task_19_10/: task_19_10.py  test_task_19_10.py
Basic collections - Dictionaries and Sets/task_19_2/: task_19_2.py  test_task_19_2.py
Basic collections - Dictionaries and Sets/task_19_4/: task_19_4.py  test_task_19_4.py
Basic collections - Dictionaries and Sets/task_19_6/: task_19_6.py  test_task_19_6.py
Basic collections - Dictionaries and Sets/task_19_7/: task_19_7.py  test_task_19_7.py
Basic collections - Dictionaries and Sets/task_19_8/: task_19_8.py  test_task_19_8.py
Basic collections - Dictionaries and Sets/task_19_9/: task_19_9.py  test_task_19_9.py
Basic collections - Tuples/Task_20_1/: task_20_1.py  test_task_20_1.py
Basic collections - Tuples/Task_20_2/: test_task_20_2.py
Basic collections - Tuples/Task_20_3/: task_20_3.py  test_task_20_3.py
Basic collections - Tuples/Task_20_8/: task_20_8.py  test_task_20_8.py
Basic collections - Tuples/Task_20_9/: task_20_9.py  test_task_20_9.py
Basic collections - Tuples/task20_1/: task20_1.py  test_task20_1.py
Basic collections - Tuples/task20_2/: test_task20_2.py
Basic collections - Tuples/task_20_1/: test_task_20_1.py
Basic collections - string/task_18_10/: task_18_10.py  test_task_18_10.py
Basic collections - string/task_18_2/: task_18_2.py  test_task_18_2.py
Basic collections - string/task_18_5/: task_18_5.py  test_task_18_2.py
(+32 files in other folders)
