[tool.poetry]
name = "Skillbox_tasks"
version = "1.1.13"
description = "Tasks on the Skillbox project"
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]
maintainers = ["E1-Bart0 <starovoitov.vadik1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate="^1.2.1"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
flake8-return = "^1.1.3"
pep8-naming = "^0.12.1"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
black = "^22.3"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"
